Improve pytest configuration and path setup
Updated conftest.py to add both lambda and their test directories to sys.path, excluding '__pycache__' and 'shared'. Modified pytest.ini to include 'lambdas' in pythonpath and added norecursedirs to ignore common directories. These changes enhance test discovery and isolation.

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,7 +1,9 @@
 [pytest]
-pythonpath = .
+pythonpath = . lambdas
 testpaths = lambdas
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+norecursedirs = __pycache__ .git .venv venv .terraform
 addopts = -v --tb=short
+
