--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,9 +1,4 @@
 [pytest]
-pythonpath = . lambdas
-testpaths = lambdas
+pythonpath = .
 python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
-norecursedirs = __pycache__ .git .venv venv .terraform
-addopts = -v --tb=short
-
+norecursedirs = __pycache__ .git .venv venv .terraform package
