Update Dockerfile and compose config

--- a/fog/.gitignore
+++ b/fog/.gitignore
@@ -91,7 +91,12 @@ fog/.env
 .env
 
 # AWS IoT certificates directory
-fog/certs/
+**/certs/
+
+# PEM and certificate files
+*.pem
+*.key
+*.crt
 
 # Virtual environment
 venv/
