--- a/fog/pyproject.toml
+++ b/fog/pyproject.toml
@@ -6,13 +6,13 @@ authors = [
     {name = "Roberto Garcia"}
 ]
 readme = "README.md"
-requires-python = "3.12"
+requires-python = ">=3.12,<3.13"
 dependencies = [
     "numpy >=1.26.0,<2.0.0",
     "opencv-python >=4.10.0",
     "ultralytics >=8.3.0",
-    "torch ==2.5.0+cpu",
-    "torchvision ==0.20.0+cpu",
+    "torch ==2.5.0",
+    "torchvision ==0.20.0",
     "boto3 >=1.34.0",
     "botocore >=1.34.0",
     "awsiotsdk >=1.12.0",
@@ -21,7 +21,11 @@ dependencies = [
     "pyyaml ==6.0.1",
 ]
 
-
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[[tool.poetry.source]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+priority = "explicit"
