--- a/fog/Dockerfile
+++ b/fog/Dockerfile
@@ -18,7 +18,7 @@ COPY . /app/
 FROM python:3.12-slim
 
 RUN apt-get update && apt-get install -y \
-    libgl1 libglib2.0-0 \
+    libgl1 libglib2.0-0 libsm6 libxext6 libxrender1 ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
 RUN useradd --create-home --shell /bin/bash appuser
@@ -38,4 +38,4 @@ RUN chown -R appuser:appuser /app
 
 USER appuser
 
-CMD ["python", "src/edge_publisher.py", "--use-yolo", "--iterations", "-1", "--interval", "5"]
+CMD ["python", "src/edge_publisher.py", "--use-yolo", "--video", "assets/parking_lot.mp4", "--frame-skip", "5", "--iterations", "-1", "--interval", "5"]
