Refactor event publishing for parking occupancy changes

--- a/fog/compose.yaml
+++ b/fog/compose.yaml
@@ -8,6 +8,8 @@ services:
       AWS_IOT_ENDPOINT: ${AWS_IOT_ENDPOINT}
       AWS_IOT_CERT_PATH: ${AWS_IOT_CERT_PATH}
       AWS_IOT_THING_NAME: ${AWS_IOT_THING_NAME}
+      AWS_IOT_FACILITY_ID: ${AWS_IOT_FACILITY_ID}
+      AWS_IOT_ZONE_ID: ${AWS_IOT_ZONE_ID}
       AWS_IOT_TOPIC: ${AWS_IOT_TOPIC}
       PYTHONUNBUFFERED: ${PYTHONUNBUFFERED}
     stdin_open: true
